# freetypecpp

./: CMakeLists.txt  README.md
src/: Face.cpp  Face.h  Glyph.cpp  Glyph.h  Library.cpp  Library.h  Types.h  errors.cpp  errors.h  library.h
tools/: CMakeLists.txt
tools/font_stats/: CMakeLists.txt  font_stats.cpp
tools/glyph_info/: CMakeLists.txt  glyph_info.cpp
